--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,9 @@ rand = "0.7"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = { version = "0.8", optional = true }
 tokio = { version = "1.6", features = ["sync"] }
+thiserror = "*"
 
+ton_abi = { git = "https://github.com/tonlabs/ton-labs-abi.git" }
 ton_api = { git = "https://github.com/broxus/ton-labs-tl.git", package = "ton_api", branch = "original", default-features = false }
 adnl = { git = "https://github.com/broxus/ton-labs-adnl", default-features = false, features = ["node"] }
 dht = { git = "https://github.com/broxus/ton-labs-dht.git" }
