WIP: node indexer

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ version = "0.1.0"
 authors = ["Ivan Kalinin <i.kalinin@dexpa.io>"]
 edition = "2018"
 
+[dependencies]
+
 #[lib]
 #name = "ton_indexer_lib"
 #path = "src/lib.rs"
