--- a/node-indexer/Cargo.toml
+++ b/node-indexer/Cargo.toml
@@ -14,3 +14,22 @@ futures = "0.3.15"
 bb8 = "0.7.0"
 thiserror = "1.0.25"
 dashmap = "4.0.2"
+
+
+anyhow = "1.0"
+async-trait = "0.1.50"
+config = "0.11"
+serde = { version = "1.0", features = ["derive"] }
+serde_yaml = { version = "0.8" }
+serde_json = "1.0"
+tokio = { version = "1", features = ["sync"] }
+
+
+ton_abi = { git = "https://github.com/tonlabs/ton-labs-abi.git" }
+ton_api = { git = "https://github.com/broxus/ton-labs-tl.git", branch = "original", package = "ton_api" }
+ton_block = { git = "https://github.com/tonlabs/ton-labs-block.git" }
+ton_executor = { git = "https://github.com/broxus/ton-labs-executor.git" }
+ton_types = { git = "https://github.com/tonlabs/ton-labs-types.git" }
+ton_vm = { git = "https://github.com/broxus/ton-labs-vm.git" }
+log = "0.4.14"
+tryhard = "0.3.0"
