--- a/node-indexer/Cargo.toml
+++ b/node-indexer/Cargo.toml
@@ -22,7 +22,7 @@ config = "0.11"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = { version = "0.8" }
 serde_json = "1.0"
-tokio = { version = "1", features = ["sync"] }
+tokio = { version = "1", features = ["full"] }
 env_logger = "0.8.3"
 
 
@@ -36,3 +36,6 @@ log = "0.4.14"
 tryhard = "0.3.0"
 tokio-stream = "0.1.6"
 either = "1.6.1"
+
+[profile.release]
+debug=true
