--- a/indexer-lib/Cargo.toml
+++ b/indexer-lib/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "indexer_lib"
+name = "indexer-lib"
 version = "0.1.0"
 authors = ["Vladimir Petrzhikovskiy <v.petrzhikovskiy@dexpa.io>"]
 edition = "2018"
