wip: Add custom ADNL client

--- a/node-indexer/Cargo.toml
+++ b/node-indexer/Cargo.toml
@@ -4,39 +4,48 @@ version = "0.1.0"
 authors = ["Vladimir Petrzhikovskiy <v.petrzhikovskiy@dexpa.io>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-shared-deps = {path = "../shared-deps"}
 parking_lot = "0.11.1"
-adnl = {git = "git://github.com/broxus/ton-labs-adnl.git"}
 futures = "0.3.15"
+bytes = "1.0"
 bb8 = "0.7.0"
 thiserror = "1.0.25"
 dashmap = "4.0.2"
-
-
+aes = { version = "0.7", features = ["ctr"] }
+generic-array = "0.12"
 anyhow = "1.0"
 async-trait = "0.1.50"
+rand = "0.7"
 config = "0.11"
+sha2 = "0.8"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = { version = "0.8" }
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
 env_logger = "0.8.3"
-
-
-ton_abi = { git = "https://github.com/tonlabs/ton-labs-abi.git" }
-ton_api = { git = "https://github.com/broxus/ton-labs-tl.git", branch = "original", package = "ton_api" }
-ton_block = { git = "https://github.com/tonlabs/ton-labs-block.git" }
-ton_executor = { git = "https://github.com/broxus/ton-labs-executor.git" }
-ton_types = { git = "https://github.com/tonlabs/ton-labs-types.git" }
-ton_vm = { git = "https://github.com/broxus/ton-labs-vm.git" }
+curve25519-dalek = "3.1"
+ed25519-dalek = "1.0"
 log = "0.4.14"
 tryhard = "0.3.0"
 tokio-stream = "0.1.6"
+tokio-io-timeout = "1.1"
 either = "1.6.1"
 chrono = "0.4.19"
-hex ="0.4.3"
+hex = "0.4.3"
+x25519-dalek = "1"
+
+ton_abi = { git = "https://github.com/tonlabs/ton-labs-abi.git" }
+ton_block = { git = "https://github.com/tonlabs/ton-labs-block.git" }
+ton_types = { git = "https://github.com/tonlabs/ton-labs-types.git" }
+
+shared-deps = { path = "../shared-deps" }
+
+[dependencies.ton_api]
+git = "https://github.com/broxus/ton-labs-tl.git"
+branch = "original"
+package = "ton_api"
+default-features = false
+features = ["lite_api"]
+
 [profile.release]
-debug=true
+debug = true
