--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,21 @@ version = "0.1.0"
 authors = ["Ivan Kalinin <i.kalinin@dexpa.io>"]
 edition = "2018"
 
+[lib]
+name = "ton_indexer_lib"
+path = "src/lib.rs"
+
+[[bin]]
+name = "ton_indexer"
+path = "src/main.rs"
+required-features = ["binary"]
+
+[[bench]]
+name = "block_parse"
+harness = false
 
 [workspace]
 members = ["indexer-lib", "node-indexer"]
-
-
 
 [dependencies]
 async-trait = "0.1"
@@ -41,7 +51,5 @@ ton_types = { git = "https://github.com/tonlabs/ton-labs-types.git" }
 criterion = { version = "0.3", features = ["html_reports"] }
 indexer-lib = { path = "./indexer-lib" }
 
-
-[[bench]]
-name = "block_parse"
-harness = false
+[features]
+binary = ["clap", "log4rs", "serde_yaml", "tokio/rt-multi-thread", "tokio/macros"]
