--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,9 +41,9 @@ thiserror = "*"
 ton_abi = { git = "https://github.com/tonlabs/ton-labs-abi.git" }
 ton_api = { git = "https://github.com/broxus/ton-labs-tl.git", package = "ton_api", branch = "original", default-features = false }
 adnl = { git = "https://github.com/broxus/ton-labs-adnl", default-features = false, features = ["node"] }
-dht = { git = "https://github.com/broxus/ton-labs-dht.git" }
+dht = { git = "https://github.com/broxus/ton-labs-dht.git", branch = "old-raptorq" }
 rldp = { git = "https://github.com/broxus/ton-labs-rldp.git", branch = "old-raptorq" }
-overlay = { git = "https://github.com/broxus/ton-labs-overlay.git" }
+overlay = { git = "https://github.com/broxus/ton-labs-overlay.git", branch = "old-raptorq" }
 ton_block = { git = "https://github.com/tonlabs/ton-labs-block.git" }
 ton_types = { git = "https://github.com/tonlabs/ton-labs-types.git" }
 
