Auto stash before merge of "master" and "origin/master"

--- a/indexer-lib/Cargo.toml
+++ b/indexer-lib/Cargo.toml
@@ -15,3 +15,4 @@ log = "0.4.14"
 anyhow = "1.0.40"
 thiserror = "1.0.25"
 shared-deps = { path = "../shared-deps" }
+serde = { version = "1.0.126", features = ["derive"] }
