--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ base64 = "0.13"
 config = "0.11"
 clap = { version = "3.0.0-beta.2", optional = true }
 dashmap = "4.0"
+ed25519-dalek = "1.0"
 external-ip = "4.1"
 futures = "0.3"
 hex = "0.4"
@@ -39,11 +40,8 @@ tokio = { version = "1.6", features = ["sync"] }
 thiserror = "*"
 
 ton_abi = { git = "https://github.com/tonlabs/ton-labs-abi.git" }
-ton_api = { git = "https://github.com/broxus/ton-labs-tl.git", package = "ton_api", branch = "original" }
-adnl = { git = "https://github.com/broxus/ton-labs-adnl", default-features = false, features = ["node"] }
-dht = { git = "https://github.com/broxus/ton-labs-dht.git", branch = "old-raptorq" }
-rldp = { git = "https://github.com/broxus/ton-labs-rldp.git", branch = "old-raptorq" }
-overlay = { git = "https://github.com/broxus/ton-labs-overlay.git", branch = "old-raptorq" }
+ton_api = { git = "https://github.com/broxus/ton-labs-tl.git", package = "ton_api", branch = "original", default-features = false }
+tiny-adnl = { git = "https://github.com/broxus/tiny-adnl.git" }
 ton_block = { git = "https://github.com/tonlabs/ton-labs-block.git" }
 ton_types = { git = "https://github.com/tonlabs/ton-labs-types.git" }
 
