--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,8 +41,7 @@ thiserror = "*"
 
 ton_abi = { git = "https://github.com/tonlabs/ton-labs-abi.git" }
 ton_api = { git = "https://github.com/broxus/ton-labs-tl.git", package = "ton_api", branch = "original", default-features = false }
-#tiny-adnl = { git = "https://github.com/broxus/tiny-adnl.git" }
-tiny-adnl = { path = "../tiny-adnl" }
+tiny-adnl = { git = "https://github.com/broxus/tiny-adnl.git" }
 ton_block = { git = "https://github.com/tonlabs/ton-labs-block.git" }
 ton_types = { git = "https://github.com/tonlabs/ton-labs-types.git" }
 
