--- a/node-indexer/Cargo.toml
+++ b/node-indexer/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Vladimir Petrzhikovskiy <v.petrzhikovskiy@dexpa.io>"]
 edition = "2018"
 
 [dependencies]
+tiny-adnl = { git = "https://github.com/0xdeafbeef/tiny-adnl.git" }
 parking_lot = "0.11.1"
 futures = "0.3.15"
 bytes = "1.0"
@@ -37,7 +38,7 @@ x25519-dalek = "1"
 ton_abi = { git = "https://github.com/tonlabs/ton-labs-abi.git" }
 ton_block = { git = "https://github.com/tonlabs/ton-labs-block.git" }
 ton_types = { git = "https://github.com/tonlabs/ton-labs-types.git" }
-nekoton = { git = "ssh://git@gitlab.dexpa.io/crystal-wallet/nekoton.git", branch = 'dev' }
+nekoton = { git = "ssh://git@gitlab.dexpa.io/crystal-wallet/nekoton.git", branch = 'dev', default-features = false }
 
 indexer-lib = { path = "../indexer-lib" }
 shared-deps = { path = "../shared-deps" }
