--- a/node-indexer/Cargo.toml
+++ b/node-indexer/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Vladimir Petrzhikovskiy <v.petrzhikovskiy@dexpa.io>"]
 edition = "2018"
 
 [dependencies]
-tiny-adnl = { git = "https://github.com/0xdeafbeef/tiny-adnl.git" }
+tiny-adnl = { git = "https://github.com/broxus/tiny-adnl.git" }
 parking_lot = "0.11.1"
 futures = "0.3.15"
 bytes = "1.0"
