--- a/node-indexer/Cargo.toml
+++ b/node-indexer/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 
 [dependencies]
 tiny-adnl = { git = "https://github.com/broxus/tiny-adnl.git" }
+#tiny-adnl = { path = "../../tiny-adnl/" }
 parking_lot = "0.11.1"
 futures = "0.3.15"
 bytes = "1.0"
