--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ log = "0.4"
 log4rs = { version = "1.0", optional = true }
 rand = "0.7"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = { version = "1.0", optional = true }
 serde_yaml = { version = "0.8", optional = true }
 tokio = { version = "1.6", features = ["sync"] }
 thiserror = "*"
@@ -48,6 +49,7 @@ ton_types = { git = "https://github.com/tonlabs/ton-labs-types.git" }
 [dev-dependencies]
 criterion = { version = "0.3", features = ["html_reports"] }
 indexer-lib = { path = "./indexer-lib" }
+serde_json = "1.0"
 
 [features]
 binary = ["clap", "log4rs", "serde_yaml", "tokio/rt-multi-thread", "tokio/macros"]
