--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ members = ["indexer-lib", "node-indexer"]
 async-trait = "0.1"
 anyhow = "1.0"
 base64 = "0.13"
+bincode = "1.3"
 config = "0.11"
 clap = { version = "3.0.0-beta.2", optional = true }
 dashmap = "4.0"
