--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,7 +38,8 @@ rand = "0.7"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0", optional = true }
 serde_yaml = { version = "0.8", optional = true }
-tokio = { version = "1.6", features = ["sync"] }
+sled = "0.34"
+tokio = { version = "1.6", features = ["sync", "fs"] }
 thiserror = "*"
 
 ton_abi = { git = "https://github.com/tonlabs/ton-labs-abi.git" }
