--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ futures = "0.3"
 hex = "0.4"
 log = "0.4"
 log4rs = { version = "1.0", optional = true }
+parking_lot = "0.11"
 rand = "0.7"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0", optional = true }
