--- a/node-indexer/Cargo.toml
+++ b/node-indexer/Cargo.toml
@@ -5,8 +5,8 @@ authors = ["Vladimir Petrzhikovskiy <v.petrzhikovskiy@dexpa.io>"]
 edition = "2018"
 
 [dependencies]
-tiny-adnl = { git = "https://github.com/broxus/tiny-adnl.git" }
-#tiny-adnl = { path = "../../tiny-adnl/" }
+#tiny-adnl = { git = "https://github.com/broxus/tiny-adnl.git" }
+tiny-adnl = { path = "../../tiny-adnl/", features=[] }
 parking_lot = "0.11.1"
 futures = "0.3.15"
 bytes = "1.0"
@@ -35,6 +35,8 @@ either = "1.6.1"
 chrono = "0.4.19"
 hex = "0.4.3"
 x25519-dalek = "1"
+
+log4rs = "1.0.0"
 
 ton_abi = { git = "https://github.com/tonlabs/ton-labs-abi.git" }
 ton_block = { git = "https://github.com/tonlabs/ton-labs-block.git" }
