--- a/indexer-lib/Cargo.toml
+++ b/indexer-lib/Cargo.toml
@@ -16,3 +16,4 @@ anyhow = "1.0.40"
 thiserror = "1.0.25"
 shared-deps = { path = "../shared-deps" }
 serde = { version = "1.0.126", features = ["derive"] }
+nekoton = { git = "https://github.com/broxus/nekoton.git", default-features = false }
