--- a/indexer-lib/Cargo.toml
+++ b/indexer-lib/Cargo.toml
@@ -16,4 +16,4 @@ anyhow = "1.0.40"
 thiserror = "1.0.25"
 shared-deps = { path = "../shared-deps" }
 serde = { version = "1.0.126", features = ["derive"] }
-nekoton = { git = "https://github.com/broxus/nekoton.git", default-features = false }
+nekoton = { git = "https://github.com/broxus/nekoton.git", default-features = false, rev = '23e47a0f75272d0eaadac58fbf05bd719009d766' }
