--- a/node-indexer/Cargo.toml
+++ b/node-indexer/Cargo.toml
@@ -35,7 +35,7 @@ x25519-dalek = "1"
 ton_abi = { git = "https://github.com/tonlabs/ton-labs-abi.git" }
 ton_block = { git = "https://github.com/tonlabs/ton-labs-block.git" }
 ton_types = { git = "https://github.com/tonlabs/ton-labs-types.git" }
-nekoton = { git = "https://github.com/broxus/nekoton.git", default-features = false }
+nekoton = { git = "https://github.com/broxus/nekoton.git", default-features = false, rev = '23e47a0f75272d0eaadac58fbf05bd719009d766' }
 
 shared-deps = { path = "../shared-deps" }
 
