--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,7 @@ sled = "0.34"
 tokio = { version = "1.6", features = ["sync", "fs"] }
 thiserror = "*"
 
-ton_abi = { git = "https://github.com/tonlabs/ton-labs-abi.git" }
+ton_abi = { git = "https://github.com/broxus/ton-labs-abi" }
 ton_api = { git = "https://github.com/broxus/ton-labs-tl.git", package = "ton_api", branch = "original", default-features = false }
 tiny-adnl = { git = "https://github.com/broxus/tiny-adnl.git" }
 ton_block = { git = "https://github.com/tonlabs/ton-labs-block.git" }
