--- a/node-indexer-test/Cargo.toml
+++ b/node-indexer-test/Cargo.toml
@@ -7,11 +7,12 @@ edition = "2018"
 
 [dependencies]
 anyhow ="1.0.41"
+hex ="0.4.3"
 node-indexer = { path = "../node-indexer" }
-log4rs = "1.0.0"
+env_logger = "0.8.4"
 tokio = { version = '1', features = ['full'] }
 futures = "0.3.15"
-ton_abi = { git = "https://github.com/tonlabs/ton-labs-abi.git" }
+ton_abi = { git = "https://github.com/broxus/ton-labs-abi" }
 ton_block = { git = "https://github.com/tonlabs/ton-labs-block.git" }
 ton_types = { git = "https://github.com/tonlabs/ton-labs-types.git" }
 nekoton = { git = "https://github.com/broxus/nekoton.git", default-features = false }
@@ -24,3 +25,4 @@ git = "https://github.com/broxus/ton-labs-tl.git"
 branch = "original"
 package = "ton_api"
 features = ["lite_api", "ton_api"]
+
