--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,3 +56,6 @@ serde_json = "1.0"
 
 [features]
 binary = ["clap", "log4rs", "serde_json", "serde_yaml", "tokio/rt-multi-thread", "tokio/macros"]
+
+[profile.release]
+debug = 1
