--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,7 @@ sled = "0.34"
 tokio = { version = "1.6", features = ["sync", "fs"] }
 thiserror = "*"
 
-ton_abi = { git = "https://github.com/tonlabs/ton-labs-abi" }
+ton_abi = { git = "https://github.com/tonlabs/ton-labs-abi", rev = "a2b2a9dc2e8c30a070e9af79cf0c24a55bdd5a87" }
 ton_api = { git = "https://github.com/broxus/ton-labs-tl.git", package = "ton_api", branch = "original", default-features = false }
 tiny-adnl = { git = "https://github.com/broxus/tiny-adnl.git" }
 ton_block = { git = "https://github.com/tonlabs/ton-labs-block.git" }
