--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ base64 = "0.13"
 bincode = "1.3"
 config = "0.11"
 clap = { version = "3.0.0-beta.2", optional = true }
+crc = "1.8"
 dashmap = "4.0"
 ed25519-dalek = "1.0"
 external-ip = "4.1"
