--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ ed25519-dalek = "1.0"
 external-ip = "4.1"
 futures = "0.3"
 hex = "0.4"
+num-traits = "0.2"
 log = "0.4"
 log4rs = { version = "1.0", optional = true }
 parking_lot = "0.11"
@@ -40,6 +41,7 @@ rand = "0.7"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0", optional = true }
 serde_yaml = { version = "0.8", optional = true }
+sha2 = "0.9"
 sled = "0.34"
 tokio = { version = "1.6", features = ["sync", "fs"] }
 thiserror = "*"
