--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ hex = "0.4"
 num-traits = "0.2"
 log = "0.4"
 log4rs = { version = "1.0", optional = true }
+libc = "0.2"
 parking_lot = "0.11"
 rand = "0.7"
 serde = { version = "1.0", features = ["derive"] }
