--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,9 +43,10 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0", optional = true }
 serde_yaml = { version = "0.8", optional = true }
 sha2 = "0.9"
-sled = "0.34"
 tokio = { version = "1.6", features = ["sync", "fs"] }
 thiserror = "*"
+
+sled = { git = "https://github.com/spacejam/sled.git" }
 
 ton_abi = { git = "https://github.com/tonlabs/ton-labs-abi", rev = "a2b2a9dc2e8c30a070e9af79cf0c24a55bdd5a87" }
 ton_api = { git = "https://github.com/broxus/ton-labs-tl.git", package = "ton_api", branch = "original", default-features = false }
