--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,7 +46,7 @@ sha2 = "0.9"
 tokio = { version = "1.6", features = ["sync", "fs"] }
 thiserror = "*"
 
-sled = { git = "https://github.com/spacejam/sled.git" }
+sled = { git = "https://github.com/spacejam/sled.git", rev = "9dacc9721ee8fe3608f0d09e2d5f91f10a2c61eb" }
 
 ton_abi = { git = "https://github.com/tonlabs/ton-labs-abi", rev = "a2b2a9dc2e8c30a070e9af79cf0c24a55bdd5a87" }
 ton_api = { git = "https://github.com/broxus/ton-labs-tl.git", package = "ton_api", branch = "original", default-features = false }
