Replace duplicated code with `nekoton-utils`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,6 +54,8 @@ tiny-adnl = { git = "https://github.com/broxus/tiny-adnl.git" }
 ton_block = { git = "https://github.com/tonlabs/ton-labs-block.git" }
 ton_types = { git = "https://github.com/tonlabs/ton-labs-types.git" }
 
+nekoton-utils = { git = "https://github.com/broxus/nekoton.git" }
+
 [dev-dependencies]
 criterion = { version = "0.3", features = ["html_reports"] }
 indexer-lib = { path = "./indexer-lib" }
@@ -61,6 +63,3 @@ serde_json = "1.0"
 
 [features]
 binary = ["clap", "log4rs", "serde_json", "serde_yaml", "tokio/rt-multi-thread", "tokio/macros"]
-
-#[profile.release]
-#debug = 1
