--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,9 +28,8 @@ sha2 = "0.9"
 tokio = { version = "1.6", features = ["sync", "fs"] }
 thiserror = "*"
 
-#sled = { git = "https://github.com/spacejam/sled.git", rev = "9dacc9721ee8fe3608f0d09e2d5f91f10a2c61eb" }
 rocksdb = { version = "0.17.0", features = ["multi-threaded-cf"] }
-ton_api = { git = "https://github.com/broxus/ton-labs-tl.git", package = "ton_api", features = ["ton_api", "lite_api"] }
+ton_api = { git = "https://github.com/broxus/ton-labs-tl.git", package = "ton_api" }
 tiny-adnl = { git = "https://github.com/broxus/tiny-adnl.git" }
 ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
 ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }
