--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,3 +47,7 @@ log4rs = "1.0"
 serde_json = "1.0"
 serde_yaml = "0.8"
 tokio = { version = "1.6", features = ["sync", "fs", "rt-multi-thread", "macros"] }
+
+[features]
+default = []
+sha-native = ["sha2/asm"]
