--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,7 +41,7 @@ nekoton-utils = { git = "https://github.com/broxus/nekoton.git" }
 
 [dev-dependencies]
 clap = "3.0.0-beta.2"
-config = "0.11"
+config = { version = "0.11", default-features = false, features = ["yaml"] }
 external-ip = "4.1"
 log4rs = "1.0"
 serde_json = "1.0"
