--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ smallvec = { version = "1.6.1", features = ["serde", "write", "union"] }
 tokio = { version = "1.6", features = ["sync", "fs"] }
 thiserror = "*"
 
-rocksdb = { version = "0.17.0", features = ["multi-threaded-cf"] }
+rocksdb = { version = "0.17.0", features = ["multi-threaded-cf", "lz4"], default-features = false }
 
 ton_api = { git = "https://github.com/broxus/ton-labs-tl.git", package = "ton_api", default-features = false }
 tiny-adnl = { git = "https://github.com/broxus/tiny-adnl.git" }
@@ -38,6 +38,8 @@ ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
 ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }
 
 nekoton-utils = { git = "https://github.com/broxus/nekoton.git" }
+fdlimit = "0.2.1"
+rlimit = "0.6.2"
 
 [dev-dependencies]
 clap = "3.0.0-beta.2"
