--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,4 +52,4 @@ tokio = { version = "1.6", features = ["sync", "fs", "rt-multi-thread", "macros"
 
 [features]
 default = []
-sha-native = ["sha2/asm"]
+asm = ["sha2/asm", "ed25519-dalek/asm", "ton_types/asm", "ton_block/asm", "tiny-adnl/asm"]
