--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ smallvec = { version = "1.6.1", features = ["serde", "write", "union"] }
 tokio = { version = "1.6", features = ["sync", "fs"] }
 thiserror = "*"
 
-rocksdb = { version = "0.17.0", features = ["multi-threaded-cf", "lz4"], default-features = false }
+rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb.git", features = ["multi-threaded-cf", "lz4", "jemalloc"], default-features = false }
 
 ton_api = { git = "https://github.com/broxus/ton-labs-tl.git", package = "ton_api", default-features = false }
 tiny-adnl = { git = "https://github.com/broxus/tiny-adnl.git" }
