--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
 ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }
 
 nekoton-utils = { git = "https://github.com/broxus/nekoton.git" }
+sysinfo = { version = "0.20.1", default-features = false }
 
 [dev-dependencies]
 clap = "3.0.0-beta.2"
