--- a/ton-indexer-alloc/Cargo.toml
+++ b/ton-indexer-alloc/Cargo.toml
@@ -3,13 +3,12 @@ name = "ton-indexer-alloc"
 version = "0.1.0"
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-jemalloc-sys = { version = "0.3.2", features = ["unprefixed_malloc_on_supported_platforms", "background_threads" ] }
-errno = "0.2.7"
+errno = "0.2"
+tikv-jemallocator = "0.4"
+tikv-jemalloc-sys = { version = "0.4", features = ["unprefixed_malloc_on_supported_platforms", "background_threads"] }
+libc = "0.2"
 log = "0.4.14"
 
 [features]
-stats = ["jemalloc-sys/stats"]
-
+stats = ["tikv-jemalloc-sys/stats"]
