--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,6 @@ base64 = "0.13"
 bincode = "1.3"
 crc = "1.8"
 dashmap = "4.0"
-ed25519-dalek = "1.0"
 fdlimit = "0.2.1"
 futures = "0.3"
 hex = "0.4"
@@ -27,7 +26,7 @@ log = "0.4"
 num-traits = "0.2"
 num_cpus = "1.13.0"
 parking_lot = "0.11"
-rand = "0.7"
+rand = "0.8"
 rlimit = "0.6.2"
 serde = { version = "1.0", features = ["derive"] }
 sha2 = "0.9"
@@ -36,6 +35,7 @@ sysinfo = { version = "0.20.1", default-features = false }
 thiserror = "*"
 tokio = { version = "1.6", features = ["sync", "fs"] }
 
+ed25519-dalek = { git = "https://github.com/broxus/ed25519-dalek.git" }
 rocksdb = { git = "https://github.com/broxus/rust-rocksdb.git", features = ["multi-threaded-cf", "lz4", "jemalloc"], default-features = false }
 
 ton_api = { git = "https://github.com/broxus/ton-labs-tl.git", package = "ton_api", default-features = false }
