--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ path = "examples/simple_node.rs"
 
 [dependencies]
 anyhow = "1.0"
+async-recursion = "0.3.2"
 async-trait = "0.1"
 base64 = "0.13"
 bincode = "1.3"
@@ -46,6 +47,7 @@ ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }
 nekoton-utils = { git = "https://github.com/broxus/nekoton.git" }
 
 ton-indexer-alloc = { path = "ton-indexer-alloc" }
+itertools = "0.10.1"
 
 [dev-dependencies]
 argh = "0.1"
