--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,6 @@ path = "examples/simple_node.rs"
 
 [dependencies]
 anyhow = "1.0"
-async-recursion = "0.3.2"
 async-trait = "0.1"
 base64 = "0.13"
 bincode = "1.3"
@@ -36,11 +35,14 @@ sysinfo = { version = "0.20.1", default-features = false }
 thiserror = "*"
 tokio = { version = "1.6", features = ["sync", "fs"] }
 
+lru_time_cache = "0.11.11"
+
 ed25519-dalek = { git = "https://github.com/broxus/ed25519-dalek.git" }
 rocksdb = { git = "https://github.com/broxus/rust-rocksdb.git", features = ["multi-threaded-cf", "lz4", "jemalloc"], default-features = false }
 
 ton_api = { git = "https://github.com/broxus/ton-labs-tl.git", package = "ton_api", default-features = false }
 tiny-adnl = { git = "https://github.com/broxus/tiny-adnl.git" }
+#tiny-adnl = { path = "../tiny-adnl" }
 ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
 ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }
 
