--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ anyhow = "1.0"
 async-trait = "0.1"
 base64 = "0.13"
 bincode = "1.3"
+bytes = "1.1.0"
 crc = "1.8"
 dashmap = "4.0"
 fdlimit = "0.2.1"
