--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Ivan Kalinin <i.kalinin@dexpa.io>"]
 edition = "2018"
 
 [workspace]
-members = ["ton-indexer-alloc"]
+members = ["ton-indexer-alloc", "ton-indexer-profile"]
 
 [[example]]
 name = "simple_node"
@@ -37,7 +37,6 @@ smallvec = { version = "1.6.1", features = ["serde", "write", "union"] }
 sysinfo = { version = "0.20.1", default-features = false }
 thiserror = "*"
 tokio = { version = "1.6", features = ["sync", "fs"] }
-
 lru_time_cache = "0.11.11"
 
 ed25519-dalek = { git = "https://github.com/broxus/ed25519-dalek.git" }
@@ -51,6 +50,7 @@ ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }
 nekoton-utils = { git = "https://github.com/broxus/nekoton.git" }
 
 ton-indexer-alloc = { path = "ton-indexer-alloc" }
+prf = { path = "ton-indexer-profile", package="ton-indexer-profile" }
 
 [dev-dependencies]
 argh = "0.1"
@@ -64,3 +64,4 @@ tokio = { version = "1.6", features = ["sync", "fs", "rt-multi-thread", "macros"
 [features]
 default = []
 asm = ["sha2/asm", "ed25519-dalek/asm", "ton_types/asm", "ton_block/asm", "tiny-adnl/asm"]
+profile = ["prf/active"]
