--- a/ton-indexer-profile/Cargo.toml
+++ b/ton-indexer-profile/Cargo.toml
@@ -3,10 +3,13 @@ name = "ton-indexer-profile"
 version = "0.1.0"
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+bincode = "1.3.3"
+byteorder = "1.4.3"
+crossbeam = "0.8.1"
 log = "0.4.14"
+once_cell = "1.8.0"
+serde = { version = "1.0", features = ["derive"] }
 
 [dev-dependencies]
 env_logger = "0.9.0"
