--- a/ton-indexer-profile/Cargo.toml
+++ b/ton-indexer-profile/Cargo.toml
@@ -4,11 +4,10 @@ version = "0.1.0"
 edition = "2018"
 
 [dependencies]
-bincode = "1.3.3"
-byteorder = "1.4.3"
-crossbeam = "0.8.1"
-log = "0.4.14"
-once_cell = "1.8.0"
+bincode = "1.3"
+byteorder = "1.4"
+crossbeam-channel = "0.5"
+log = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 
 [dev-dependencies]
