--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,8 @@
 name = "ton-indexer"
 version = "0.1.0"
 authors = ["Ivan Kalinin <i.kalinin@dexpa.io>"]
-edition = "2018"
+edition = "2021"
+rust-version = "1.56"
 
 [workspace]
 members = ["ton-indexer-alloc", "ton-indexer-profile"]
@@ -36,7 +37,7 @@ sha2 = "0.9"
 smallvec = { version = "1.6.1", features = ["serde", "write", "union"] }
 sysinfo = { version = "0.20.1", default-features = false }
 thiserror = "*"
-tokio = { version = "1.6", features = ["sync", "fs"] }
+tokio = { version = "1.6", features = ["sync", "fs", "rt-multi-thread"] }
 lru_time_cache = "0.11.11"
 
 ed25519-dalek = { git = "https://github.com/broxus/ed25519-dalek.git" }
