--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,7 +38,8 @@ smallvec = { version = "1.6.1", features = ["serde", "write", "union"] }
 sysinfo = { version = "0.20.1", default-features = false }
 thiserror = "*"
 tokio = { version = "1.6", features = ["sync", "fs", "rt-multi-thread"] }
-lru_time_cache = "0.11.11"
+
+lru_time_cache = { git = "https://github.com/Rexagon/lru_time_cache.git" }
 
 ed25519-dalek = { git = "https://github.com/broxus/ed25519-dalek.git" }
 rocksdb = { git = "https://github.com/broxus/rust-rocksdb.git", features = ["multi-threaded-cf", "lz4", "jemalloc"], default-features = false }
