--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,9 +30,11 @@ num-traits = "0.2"
 num_cpus = "1.13.0"
 parking_lot = "0.11"
 pin-project-lite = "0.2"
+profl = "0.1"
 rand = "0.8"
 rlimit = "0.6.2"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 sha2 = "0.9"
 smallvec = { version = "1.6.1", features = ["serde", "write", "union"] }
 sysinfo = { version = "0.20.1", default-features = false }
@@ -40,7 +42,6 @@ thiserror = "*"
 tokio = { version = "1.6", features = ["sync", "fs", "rt-multi-thread"] }
 
 lru_time_cache = { git = "https://github.com/Rexagon/lru_time_cache.git" }
-profl = { git = "https://github.com/broxus/profl.git" }
 
 ed25519-dalek = { git = "https://github.com/broxus/ed25519-dalek.git" }
 rocksdb = { git = "https://github.com/Rexagon/rust-rocksdb.git", features = ["multi-threaded-cf", "lz4", "jemalloc"], default-features = false }
@@ -59,7 +60,6 @@ argh = "0.1"
 config = { version = "0.11", default-features = false, features = ["yaml"] }
 external-ip = "4.1"
 log4rs = "1.0"
-serde_json = "1.0"
 serde_yaml = "0.8"
 tokio = { version = "1.6", features = ["sync", "fs", "rt-multi-thread", "macros"] }
 
