--- a/ton-indexer-alloc/Cargo.toml
+++ b/ton-indexer-alloc/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 errno = "0.2"
 tikv-jemallocator = "0.4"
 tikv-jemalloc-sys = { version = "0.4", features = ["unprefixed_malloc_on_supported_platforms", "background_threads"] }
+tikv-jemalloc-ctl = "0.4"
 log = "0.4"
 
 [features]
