--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,8 @@ base64 = "0.13"
 bincode = "1.3"
 bytes = "1.1.0"
 crc = "2.1"
-dashmap = "5.1.0"
+countme = { version = "3.0.0" }
+dashmap = { version = "5.1.0", features = ['serde'], default-features = false } # to make `Ref` !Send
 fdlimit = "0.2.1"
 futures = "0.3.21"
 hex = "0.4"
@@ -61,8 +62,10 @@ cargo-husky = { version = "1.5.0", features = ["precommit-hook", "run-cargo-test
 public-ip = "0.2.2"
 log4rs = "1.0"
 serde_yaml = "0.8"
-tokio = { version = "1.16.1", features = ["sync", "fs", "rt-multi-thread", "macros", "parking_lot"] }
+tokio = { version = "1.16.1", features = ["full"] }
+human-panic = "1.0.3"
 
 [features]
 default = []
-profile = ["profl/active"]
+profile-light = ['countme/enable', "ton_types/profile"]
+profile = ["profl/active", "profile-light"]
