--- a/ton-indexer-alloc/Cargo.toml
+++ b/ton-indexer-alloc/Cargo.toml
@@ -4,11 +4,16 @@ version = "0.1.0"
 edition = "2018"
 
 [dependencies]
+anyhow = "1.0.53"
 errno = "0.2"
-tikv-jemallocator = "0.4"
-tikv-jemalloc-sys = { version = "0.4", features = ["unprefixed_malloc_on_supported_platforms", "background_threads"] }
-tikv-jemalloc-ctl = "0.4"
 log = "0.4"
+tikv-jemalloc-ctl = { version = "0.4" }
+tikv-jemalloc-sys = { version = "0.4", features = ["unprefixed_malloc_on_supported_platforms", "background_threads", "profiling"] }
+tikv-jemallocator = { version = "0.4.1", features = ["profiling", "unprefixed_malloc_on_supported_platforms", "background_threads"] }
 
 [features]
 stats = ["tikv-jemalloc-sys/stats"]
+
+
+[dev-dependencies]
+tempfile = "3.3.0"
