--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,8 @@ async-trait = "0.1"
 base64 = "0.13"
 bincode = "1.3"
 bytes = "1.1.0"
-crc = "2.1"
 countme = { version = "3.0.0" }
+crc = "2.1"
 dashmap = { version = "5.1.0", features = ["serde"], default-features = false } # to make `Ref` !Send
 fdlimit = "0.2.1"
 futures = "0.3.21"
@@ -41,6 +41,7 @@ smallvec = { version = "1.8.0", features = ["serde", "write", "union"] }
 sysinfo = { version = "0.23.5", default-features = false }
 thiserror = "1.0"
 tokio = { version = "1.17.0", features = ["sync", "fs", "rt-multi-thread", "parking_lot"] }
+tokio-util = "0.7.0"
 
 lru_time_cache = { git = "https://github.com/Rexagon/lru_time_cache.git" }
 
