--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,11 +15,10 @@ path = "examples/simple_node.rs"
 [dependencies]
 anyhow = "1.0"
 async-trait = "0.1"
-base64 = "0.13"
 bytes = "1.1.0"
 countme = { version = "3.0.0" }
 crc = "2.1"
-dashmap = { version = "5.1.0", features = ["serde"], default-features = false } # to make `Ref` !Send
+dashmap = "5.3"
 fdlimit = "0.2.1"
 futures = "0.3.21"
 hex = "0.4"
@@ -33,6 +32,7 @@ pin-project-lite = "0.2.8"
 profl = "0.1"
 rand = "0.8"
 rlimit = "0.7.0"
+rustc-hash = "1.1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sha2 = "0.9"
@@ -44,7 +44,6 @@ tokio-util = "0.7.0"
 
 lru_time_cache = { git = "https://github.com/Rexagon/lru_time_cache.git" }
 
-ed25519-dalek = { git = "https://github.com/broxus/ed25519-dalek.git" }
 rocksdb = { git = "https://github.com/Rexagon/rust-rocksdb.git", features = ["multi-threaded-cf", "zstd", "lz4", "jemalloc"], default-features = false }
 
 ton_api = { git = "https://github.com/broxus/ton-labs-tl.git", package = "ton_api", default-features = false }
