--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ path = "examples/simple_node.rs"
 
 [dependencies]
 anyhow = "1.0"
+arc-swap = "1.5.0"
 async-trait = "0.1"
 bytes = "1.1.0"
 countme = { version = "3.0.0" }
