--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,8 @@ bytes = "1.1.0"
 countme = { version = "3.0.0" }
 crc = "2.1"
 dashmap = "5.3"
-everscale-network = { version = "0.2.0", features = ["full"] }
+either = "1.6.1"
+everscale-network = "0.3.0"
 fdlimit = "0.2.1"
 futures = "0.3.21"
 hex = "0.4"
