Replace `futures` with `futures-util`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ dashmap = "5.3"
 either = "1.6.1"
 everscale-network = "0.3.0"
 fdlimit = "0.2.1"
-futures = "0.3.21"
+futures-util = "0.3"
 hex = "0.4"
 itertools = "0.10.3"
 libc = "0.2"
