--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,21 +36,20 @@ libc = "0.2"
 log = "0.4"
 num-traits = "0.2"
 num_cpus = "1.13.1"
+once_cell = "1.12.0"
 parking_lot = { version = "0.12.0", features = ["hardware-lock-elision"] }
 rand = "0.8"
-rlimit = "0.7.0"
+rlimit = "0.8.3"
 rustc-hash = "1.1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sha2 = "0.9"
 smallvec = { version = "1.8.0", features = ["const_generics", "serde", "write", "union"] }
-sysinfo = { version = "0.23.5", default-features = false }
+sysinfo = { version = "0.24.3", default-features = false }
 thiserror = "1.0"
 tl-proto = { version = "0.3.2", features = ["derive"] }
 tokio = { version = "1", features = ["sync", "fs", "rt-multi-thread", "parking_lot"] }
 tokio-util = "0.7.0"
-
-lru_time_cache = { git = "https://github.com/Rexagon/lru_time_cache.git" }
 
 rocksdb = { git = "https://github.com/Rexagon/rust-rocksdb.git", features = ["multi-threaded-cf", "zstd", "lz4", "jemalloc"], default-features = false }
 
@@ -67,7 +66,7 @@ cargo-husky = { version = "1.5.0", features = ["precommit-hook", "run-cargo-test
 config = { version = "0.11", default-features = false, features = ["yaml"] }
 log4rs = "1.0"
 serde_yaml = "0.8"
-tokio = { version = "1.16.1", features = ["full"] }
+tokio = { version = "1", features = ["full"] }
 
 ip-resolver = { path = "./ip-resolver" }
 
