Skip out of range persistent state part queries

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,6 +70,7 @@ broxus-util = { version = "0.1", default-features = false, features = ["config",
 default = []
 count-cells = ["countme/enable", "ton_types/profile"]
 io-uring = ["rocksdb/io-uring"]
+archive-uploader = ["dep:archive-uploader"]
 
 [profile.release]
 debug = true
