--- a/archive-downloader/Cargo.toml
+++ b/archive-downloader/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.56"
 futures-util = "0.3.21"
-log = "0.4.16"
 pin-project-lite = "0.2"
 rusoto_core = "0.48.0"
 rusoto_credential = "0.48.0"
@@ -14,3 +13,4 @@ rusoto_s3 = "0.48.0"
 rusoto_signature = "0.48.0"
 serde = { version = "1.0.136", features = ["derive"] }
 tokio = { version = "1", features = ["time"] }
+tracing = "0.1"
