--- a/global-config/Cargo.toml
+++ b/global-config/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 anyhow = "1.0"
 base64 = "0.13"
 everscale-crypto = "0.1.4"
-everscale-network = { version = "0.3", default-features = false }
+everscale-network = { version = "0.4.0-pre.0", default-features = false }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
