Update network lib. Improve logs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ bytes = "1.1.0"
 countme = { version = "3.0.0" }
 crc = "3.0"
 dashmap = "5.3"
-everscale-network = "0.4.0-pre.1"
+everscale-network = "0.4.0"
 fdlimit = "0.2.1"
 futures-util = "0.3"
 hex = "0.4"
