--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ name = "simple_node"
 path = "examples/simple_node.rs"
 
 [dependencies]
+ahash = "0.8"
 anyhow = "1.0"
 arc-swap = "1.5.0"
 async-trait = "0.1"
@@ -20,7 +21,7 @@ bytes = "1.1.0"
 countme = { version = "3.0.0" }
 crc = "3.0"
 dashmap = "5.3"
-everscale-network = "0.4.0"
+everscale-network = "0.5.0"
 fdlimit = "0.2.1"
 futures-util = "0.3"
 hex = "0.4"
@@ -32,14 +33,13 @@ once_cell = "1.12.0"
 parking_lot = { version = "0.12.0", features = ["hardware-lock-elision"] }
 rand = "0.8"
 rlimit = "0.8.3"
-rustc-hash = "1.1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-sha2 = "0.9"
+sha2 = "0.10"
 smallvec = { version = "1.8.0", features = ["const_generics", "serde", "write", "union"] }
-sysinfo = { version = "0.26.0", default-features = false }
+sysinfo = { version = "0.28.0", default-features = false }
 thiserror = "1.0"
-tl-proto = { version = "0.3.2", features = ["derive"] }
+tl-proto = { version = "0.4", features = ["derive"] }
 tokio = { version = "1", features = ["sync", "fs", "rt-multi-thread", "parking_lot"] }
 tokio-util = "0.7.0"
 tracing = "0.1"
