--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ anyhow = "1.0"
 arc-swap = "1.5.0"
 async-trait = "0.1"
 bytes = "1.1.0"
+bumpalo = "3.12"
 countme = { version = "3.0.0" }
 crc = "3.0"
 dashmap = "5.3"
