add block time diff to syncing logs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ everscale-network = "0.5.0"
 fdlimit = "0.2.1"
 futures-util = "0.3"
 hex = "0.4"
+humantime = "2.1.0"
 libc = "0.2"
 num-traits = "0.2"
 num_cpus = "1.13.1"
