--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ rlimit = "0.9.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sha2 = "0.10"
+schnellru = "0.2.1"
 smallvec = { version = "1.8.0", features = ["const_generics", "serde", "write", "union"] }
 sysinfo = { version = "0.29.0", default-features = false }
 thiserror = "1.0"
@@ -77,6 +78,9 @@ broxus-util = { version = "0.2", default-features = false, features = [
     "alloc",
     "public-ip",
 ] }
+pyroscope = "*"
+pyroscope_pprofrs = "*"
+
 
 [features]
 default = []
