--- a/global-config/Cargo.toml
+++ b/global-config/Cargo.toml
@@ -11,4 +11,4 @@ everscale-network = { version = "0.5.0", default-features = false }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
-ton_block = { git = "https://github.com/broxus/ton-labs-block.git", branch = "old" }
+ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
