--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,6 @@ rlimit = "0.9.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sha2 = "0.10"
-schnellru = "0.2.1"
 smallvec = { version = "1.8.0", features = ["const_generics", "serde", "write", "union"] }
 sysinfo = { version = "0.29.0", default-features = false }
 thiserror = "1.0"
@@ -55,6 +54,8 @@ ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }
 archive-uploader = { path = "archive-uploader", optional = true }
 global-config = { path = "global-config" }
 histogram = "0.7.2"
+mini-moka = "0.10.0"
+bytesize = { version = "1.2.0", features = ["serde"] }
 
 [dev-dependencies]
 argh = "0.1"
